Add clustering algorithm and field mapper for seismic (#1514) (#135)
* Add clustering algorithm and field mapper for seismic (#1514)

* Add clustering algorithm and field mapper for seismic

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>

* reduce comment length and increase test coverage

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>

* Fix forbiddenApi

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>

* Remove nested from mapper

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>

* Address comments in #1502

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>

* Rename some classes

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>

---------

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>

* remove original SparseTokensField

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>

---------

Signed-off-by: Liyun Xiu <xiliyun@amazon.com>